<resources>
    <string name="preferencesKey">Pref</string>
    <string name="app_name">Mediatore</string>
    <string name="server">Server</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="create_game">Crea partita</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="inserisci_il_tuo_nome">Inserisci il tuo nome</string>
    <string name="inserisci_nome_partita">Inserisci il nome della partita</string>
    <string name="debug">Debug</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="indirizzo_ip">Indirizzo IP</string>
    <string name="action_settings">Impostazioni</string>
    <string name="indirizzo_port">Porta</string>
    <string name="reset">Reset</string>
    <string name="defaultIp">192.168.1.2</string>
    <string name="defaultPort">8080</string>
    <string name="ricarica">Ricarica</string>
    <string name="lobby">Lobby</string>
    <string name="giocatori">Giocatori</string>
    <string name="nuova_partita">Nuova partita</string>
    <string name="inizia">Inizia</string>

</resources>